--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -10,62 +10,59 @@
 	<section id="main" class="wrapper style2">
 		<div class="title">Новая доска</div>
 		<div class="container">
-			<div class="row aln-center">
+			<div class="align-center">
 				<form asp-action="SaveBoard" method="post" enctype="multipart/form-data" class="p-2">
+					<div class="validation" asp-validation-summary="ModelOnly"></div>
+					
 					<div class="form-group">
-						<div class="validation" asp-validation-summary="ModelOnly"></div>
-						<div class="row aln-center">
+						<label>Имя</label>
+						<div><span asp-validation-for="Name" class="label error"></span></div>
+						<input asp-for="Name" class="form-control" type="text" value="">
+					</div>
+					
+					<br>
+
+					<div class="form-group">
+						<div class="align-center">
 							<div>
-								<label>Имя</label>
-								<div><span asp-validation-for="Name" class="label error"></span></div>
-								<input asp-for="Name" class="form-control" type="text" value="">
-							</div>
+                            	<input asp-for="Privacy" value="True" type="radio" name="privacy" id="private">
+                            	<label for="private">Приватная</label>
+                            </div>
+                            <div>
+                            	<input asp-for="Privacy" value="False" type="radio" name="privacy" id="public">
+                            	<label for="public">Публичная</label>
+                            </div>
 						</div>
 					</div>
-					<br>
-					<div class="form-group">
-						<div class="row aln-center">
-							<div>
-							<input asp-for="Privacy" value="True" type="radio" name="privacy" id="private">
-							<label for="private">Приватная</label>
-							</div>
+					
+					<section id="highlights" class="wrapper style2">
+						<div class="align-center row">
+							<div class="col-4 col-12-medium">
+                            	<section class="highlight">
+                            		<div>
+                            			<a><img class="image featured" src="/images/KanbanBoard.png" alt="Канбан доска"/></a>
+                            			<div>
+                            				<input asp-for="Format" value="0" type="radio" name="format" id="kanban" checked>
+                            				<label for="kanban">Канбан доска</label>
+                            			</div>
+                            		</div>
+                            	</section>
+                            </div>
+                            <div class="col-4 col-12-medium">
+                            	<section class="highlight">
+                            		<div>
+                            			<a><img class="image featured" src="/images/Table.png" alt="Таблица"/></a>
+                            			<div>
+                            				<input asp-for="Format" value="1" type="radio" name="format" id="table">
+                            				<label for="table">Таблица</label>
+                            			</div>
+                            		</div>
+                            	</section>
+                            </div>
 						</div>
-						<div class="row aln-center">
-							<div>
-							<input asp-for="Privacy" value="False" type="radio" name="privacy" id="public">
-							<label for="public">Публичная</label>
-							</div>
-						</div>
-					</div>
-					<div class="form-group">
-						<section id="highlights" class="wrapper style2">
-							<div class="container">
-								<div class="row aln-center">
-									<div class="col-4 col-12-medium">
-										<section class="highlight">
-											<a class="image featured"><img src="/images/KanbanBoard.png" alt="Канбан доска"/></a>
-											<div>
-												<input asp-for="Format" value="0" type="radio" name="format" id="kanban" checked>
-												<label for="kanban">Канбан доска</label>
-											</div>
-										</section>
-									</div>
-									<div class="col-4 col-12-medium">
-										<section class="highlight">
-											<a class="image featured"><img src="/images/Table.png" alt="Таблица"/></a>
-											<div>
-												 <input asp-for="Format" value="1" type="radio" name="format" id="table">
-												 <label for="table">Таблица</label>
-											</div>
-										</section>
-									</div>
-								</div>
-							</div>
-						</section>
-					</div>
-					<br>
-					<br>
-					<div class="row aln-center">
+					</section>
+					
+					<div class="align-center">
 						<button class="button" type="submit">Создать доску</button>
 					</div>
 				</form>
