--- a/Mandatum/UI/Views/Shared/KanbanBoard.cshtml
+++ b/Mandatum/UI/Views/Shared/KanbanBoard.cshtml
@@ -4,9 +4,8 @@
 <section id="highlights" class="wrapper style2">
     <div class="container">
         <div class="row aln-center">
-            @await Html.PartialAsync("KanbanColumnPatrial", Tuple.Create(TaskStatus.InWait, Model))
-            @await Html.PartialAsync("KanbanColumnPatrial", Tuple.Create(TaskStatus.InProgress, Model))
-            @await Html.PartialAsync("KanbanColumnPatrial", Tuple.Create(TaskStatus.Done, Model))
+             @await Html.PartialAsync("KanbanColumnPatrial", new KanbanColumnModel(Model.Id, Model.Tasks))
+
         </div>
     </div>
 </section>
