--- a/Mandatum/UI/Views/Shared/BoardView.cshtml
+++ b/Mandatum/UI/Views/Shared/BoardView.cshtml
@@ -15,7 +15,7 @@
                        <form asp-action="ShareBoard" asp-controller="Board" asp-route-boardId="@Model.Id" method="post">
                            <div class="form-group">
                                <h3 class="h3 pink">Поделитесь доской:</h3>
-                               <input type="text" name="userEmail" value="Введите Email получателя"/>
+                               <input type="text" name="userEmail" placeholder="Введите Email получателя"/>
                            </div>
                            <br>
                            <div class="align-center">
