--- a/Mandatum/UI/Views/Shared/KanbanBoard.cshtml
+++ b/Mandatum/UI/Views/Shared/KanbanBoard.cshtml
@@ -1,5 +1,4 @@
-﻿@using TaskStatus = Mandatum.Models.TaskStatus
-@model BoardViewModel
+﻿@model BoardViewModel
 
 <section id="highlights" class="wrapper style2">
     <div class="container">
