--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model Mandatum.ViewModels.LoginModel
+﻿@using Mandatum.infra
+@model Mandatum.ViewModels.LoginModel
  
 
 <div id="page-wrapper">
@@ -30,12 +31,16 @@
                             
                             <input type="submit" value="Войти в аккаунт" class="button login"/>
                             <label>или</label>
-                            <a asp-action="GoogleLogin" asp-controller="Account" class="button style2 login"><img class="image img" src="/images/google_colored.png" alt="">     Войти через Google</a>
-                            <a asp-action="GithubLogin" asp-controller="Account" class="button style2 login"><img class="image img" src="/images/git.png" alt="">     Войти через Git</a>
+                            <a asp-action="Login" asp-route-authType="@AuthType.Github" asp-controller="Account" class="button style2 login"><img class="image img" src="/images/git.png" alt="">     Войти через Git</a>
                         </div>
                         <br>
                         <div class="align-center">
-                             <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
+                            <a asp-action="Login" asp-route-authType="@AuthType.Google" asp-controller="Account" class="button style2 login"><img class="image img" src="/images/google_colored.png" alt=""> Войти через Google</a>
+                        </div>
+                        <br>
+                        <div class="align-center">
+                            <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
+                            
                         </div>
                     </div>
                 </form>
