--- a/Mandatum/UI/Views/Task/TaskFormPartial.cshtml
+++ b/Mandatum/UI/Views/Task/TaskFormPartial.cshtml
@@ -50,13 +50,13 @@
 
 <div class="form-group">
     <label>Описание</label>
-    <div><span asp-validation-for="Description"></span></div>
+    <div><span asp-validation-for="Description" class="label error"></span></div>
     <textarea asp-for="Description" class="form-control" rows="3"></textarea>
     <label>Исполнители</label>
-    <div><span asp-validation-for="Executors"></span></div>
+    <div><span asp-validation-for="Executors" class="label error"></span></div>
     <textarea asp-for="Executors" class="form-control" rows="3"></textarea>
     <label>Дедлайн</label>
-    <div><span asp-validation-for="Deadline"></span></div>
+    <div><span asp-validation-for="Deadline" class="label error"></span></div>
     <textarea asp-for="Deadline" class="form-control" rows="3"></textarea>
 </div>
 <br>
